--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "es2020",
     "module": "es2020",
     "lib": [
       "es2020",
-      "dom"
+      "dom",
+      
     ]
   },
   "angularCompilerOptions": {
